[WCMSFEQ-214] - Fixed IE bug where text in legend tag will not wrap.

--- a/CancerGov/_src/StyleSheets/components/_forms.scss
+++ b/CancerGov/_src/StyleSheets/components/_forms.scss
@@ -575,6 +575,7 @@ fieldset {
 	text-align: right;
 	padding-right: 0.9375em;
 	margin-bottom: 15px;
+	display: table; // this is done to overcome an IE bug where text in legend tags dont' wrap, WCMSFEQ-214
 }
 @include bp(small) {
 	.columns.legend {
